# SAR

./: .gitignore  CMakeLists.txt  FindSGX.cmake  README.md  build.sh  sgx_sign.sh
config/: config.json
federated_learning/: cifar_backdoor.py  cifar_backdoor.sh  cifar_byzantine_attacker_collude.py  cifar_byzantine_attacker_collude.sh  cifar_byzantine_attacker_collude_b.py  cifar_byzantine_attacker_collude_b.sh  cifar_byzantine_attacker_non_collude.py  cifar_byzantine_attacker_non_collude.sh  cifar_no_attacker.py  cifar_no_attacker.sh  cifar_non_iid.py  cifar_non_iid.sh  mnist_backdoor.py  mnist_backdoor.sh  mnist_byzantine_collude.py  mnist_byzantine_collude.sh  mnist_byzantine_collude_b.py  mnist_byzantine_collude_b.sh  mnist_byzantine_non_collude.py  mnist_byzantine_non_collude.sh  mnist_no_attacker.py  mnist_no_attacker.sh  mnist_non_iid.py  mnist_non_iid.sh
libs/network/: CMakeLists.txt  connection.cpp  connection.hpp  connection_manager.hpp  header.hpp  main.cpp  reply.cpp  reply.hpp  request.cpp  request.hpp  request_handler.hpp  request_parser.cpp  request_parser.hpp
libs/util/: singleton.cpp  singleton.h
srcs/: enclave.config.xml  enclave_test.pem  main.cpp  testdata.cpp
srcs/enclave/: enclave.edl  enclave_util.h  ra_context.h  ra_enclave.cpp  sar_enclave.cpp
srcs/others/: dataProcess.py  shell.sh
srcs/proto/: ra.proto  sar.proto
srcs/ra_service/: ecc_context.cpp  ecc_context.h  enclave_context.cpp  enclave_context.h  ra_message.h  ra_service.cpp  ra_service.h  sar_message.h  sar_ocall.cpp  sar_server.cpp  sar_server.h  sar_service.cpp  sar_service.h  sar_util.cpp  sar_util.h  server.cpp  server_config.cpp  server_config.h
